# usdr-translation-harness

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
apps-script/: jest.config.js  package-lock.json  package.json
apps-script/editor-addon/: .clasp.json  Evaluationsidebar.html  README.md  Sidebar.html  addon.js  appsscript.json
apps-script/orchestrator/: .clasp.json  README.md  appsscript.json  orchestrator.js  test-helpers.js
apps-script/tests/: test_dedup_csv.js  test_orchestrator.js  test_viewer.js
apps-script/viewer/: .clasp.json  .claspignore  appsscript.json  server.js  test-helpers.js  viewer.html
cloud-run/: Makefile  package-lock.json  package.json  pytest.ini  requirements-dev.txt
cloud-run/capture-feedback/: README.md  decisions.js  differ.js  doc-reader.js  glossary-writer.js  index.js  loaders.js  metrics.js  package-lock.json  package.json
cloud-run/extract/: Procfile  extraction-schema-claude.json  extraction-schema-gemini.json  index.js  llm.py  loaders.py  main.py  package-lock.json  package.json  requirements.txt
cloud-run/monitoring/: README.md  dashboard-pipeline-overview.json  dashboard-translation-quality.json
docs/: service-account-access.md
mcp-server/: README.md  pyproject.toml
mcp-server/skills/: translation-evaluator.skill
mcp-server/skills/translation-evaluator/: SKILL.md
mcp-server/skills/translation-harness-assistant/: SKILL.md
mcp-server/skills/translation-harness-assistant/references/: setup-windows.md
skills/: translation-evaluator.skill  translation-harness-assistant.skill
(+58 files in other folders)
